# Pongo

./: CMakeLists.txt  README.md
include/: ClientHandler.h  ElmtBase.h  ElmtCanvas.h  ElmtPicture.h  HtmlPage.h  HtmlWebsite.h  HttpHeaderRequest.h  HttpHeaderResponse.h  HttpStatus.h  HttpVariables.h  NetworkManagement.h  NetworkManagementSsl.h  NetworkManagerBase.h  PageImpressum.h  PageRoot.h  PageSecond.h  ResourceManager.h  UniformResourceIdentifier.h
src/: ClientHandler.cpp  ElmtBase.cpp  ElmtCanvas.cpp  ElmtPicture.cpp  HtmlPage.cpp  HtmlWebsite.cpp  HttpHeaderRequest.cpp  HttpHeaderResponse.cpp  HttpVariables.cpp  NetworkManagement.cpp  NetworkManagementSsl.cpp  NetworkManagerBase.cpp  PageImpressum.cpp  PageRoot.cpp  PageSecond.cpp  ResourceManager.cpp  UniformResourceIdentifier.cpp  main.cpp
